--- a/assets/css/wrapper.css
+++ b/assets/css/wrapper.css
@@ -10,6 +10,11 @@
     transition: all 0.3s ease;
     background-color: #343a40;
 }
+#sidebarToggle {
+    border: none;
+    box-shadow: none;
+    background-color: transparent;
+}
 
 #page-content-wrapper {
     flex: 1;
