CHANGE CARDS MARGIN BOTTOM INTO 5

--- a/src/output.css
+++ b/src/output.css
@@ -917,6 +917,9 @@
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
   }
+  .mb-7 {
+    margin-bottom: calc(var(--spacing) * 7);
+  }
   .mb-auto {
     margin-bottom: auto;
   }
@@ -1013,6 +1016,9 @@
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
+  .h-8 {
+    height: calc(var(--spacing) * 8);
+  }
   .h-16 {
     height: calc(var(--spacing) * 16);
   }
@@ -1024,6 +1030,9 @@
   }
   .h-75 {
     height: calc(var(--spacing) * 75);
+  }
+  .h-90 {
+    height: calc(var(--spacing) * 90);
   }
   .h-100 {
     height: calc(var(--spacing) * 100);
